themes and my second post

--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ tagline: Site Tagline
 author : 
   name : Johnny.Zhang
   email : szhang7@qq.com
-  github : szhang7@github.com
+  github : szhang7
   twitter : NA
-  facebook: http://facebook.com/szhang7
+  facebook: szhang7
   feedburner : NA
   keywords : Johnny.Zhang, java, db, mysql, os, linux, ubuntu, windows, management
   description: Innovation, Sharing, Openning.
