change theme to dinky, add new category--hrm

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ pygments: true
 title : Johnny.Zhang
 tagline: Site Tagline
 author : 
-  name : Johnny.Zhang
+  name : ZHANG
   email : szhang7@qq.com
   github : szhang7
   twitter : NA
