--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ author :
 #
 production_url : http://szhang7.github.com
 
+img_url: http://szhang7.github.com/assets/images
+
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
 JB :
